--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-/* COMMOM */
-* {  
+* {
   box-sizing: border-box;
 }
 
@@ -10,15 +9,13 @@ html {
 }
 
 body {
-  font-family: "Noto sans KR", sans-serif;
-  font-size: 16px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 20px;
   line-height: 1.6;
-  color: #333;
+  color: rgb(110, 103, 103);
   overflow-x: hidden;
-
 }
 
-/* 영문에만 적용할 폰트 */
 .font-en {
   font-family: "Open Sans", sans-serif;
 }
@@ -29,12 +26,8 @@ a {
 }
 
 .inner {
-  /* 고정길이 = 고정형 */
-  /* width: 1200px; */
-  /* 최대값만 제한 = 반응형 */
   max-width: 1200px;
   margin: 0 auto;
-
 }
 
 .title {
@@ -42,16 +35,25 @@ a {
   font-weight: 800;
   text-align: center;
   margin-bottom: 50px;
+
+  /* title들의 애니메이션(왼쪽에서부터 나타남) */
+  transform: translateX(-200px);
+  transition: 1s;
+  opacity: 0;
+}
+
+.title.show {
+  transform: translateX(0);
+  opacity: 1;
 }
 
 .title::after {
   content: "";
   display: block;
-  width: 80px;
+  width: 150px;
   height: 2px;
   background-color: #333;
-  margin: 24px auto 0;
-
+  margin: 15px auto 0;
 }
 
 .img {
@@ -59,67 +61,38 @@ a {
   display: block;
 }
 
-/* 버튼과 같이 여러 곳에서 반복 사용되는 요소를 공통 스타일로 작업하면, 매번 다시 작성할 필요가 없음 */
+/* 버튼과 같이 여러 곳에서 반복 사용되는 요소 */
 .btn {
   width: 120px;
   padding: 10px;
-  display: block;  /* a, span 같은 인라인 요소를 버튼으로 사용할 수도 있으니 블록으로 지정*/
-  border: 2px solid #333;
+  display: block;
+  border: 2px solid #333; 
   border-radius: 4px;
   font-size: 16px;
   font-weight: 500;
   text-align: center;
   cursor: pointer;
-  transition: 0.5s;
+
 }
+
 
 .btn:hover {
   background-color: #333;
   color: white;
 }
 
-.btn.btn--purple{
-  color: #9b30ff;
-  border-color: #9b30ff;
-}
 
-.btn.btn--purple:hover {
-  color: white;
-  border-color: #9b30ff;
-}
-
-.btn.btn--brown {
-  color: #592b18;
-  border-color: #592b18;
-}
-
-.btn.btn--brown:hover {
-  color: white;
-  border-color: #592b18;
-  background-color: #592b18;
-}
+/* -------------------------------------공통 스타일------------------------------------ */
 
 
 
 
-
-
-.animate-flash {
-  animation-name : flash;
-  animation-duration: 0.5s;
-  animation-iteration-count: 2;
-}
-
-/* -------------------------------------공통 스타일 -------------------------------------------- */
-
-
-/* HEADER */
+/* --------------------------------------HRADER--------------------------------------- */
 header {
   background-color: white;
-  border-bottom: 1px solid #c8c8c8;
-  box-shadow: 0 2px 8px rgba(204, 204, 204, 0.8);
+  border-bottom: 2px solid darkgrey;
 
-  /* 고정된 헤더 만들기 */
+   /* 고정된 헤더 만들기 */
   /* fixed가 되면 width의 기준이 부모 요소가 아니라 뷰포트가 되면서 기준이 끊겨버리고, 내용에 맞춰서 최소한으로 축소됨 */
   width: 100%;
   position: fixed;
@@ -127,9 +100,8 @@ header {
   z-index: 9;
 }
 
-
 header > .inner {
-  height: 60px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -137,28 +109,21 @@ header > .inner {
 }
 
 header .logo img {
-  width: 40px;
-  /* 가로 너비만 지정하면 세로 높이는 비율에 맞춰 정해짐 */
+  width: 50px;
+
 }
 
 header nav ul {
   display: flex;
 }
 
-header nav ul  li {
-  padding: 10px 20px;
-  font-weight: 700;
+header nav ul li {
+  padding: 20px 40px;
+  font-weight: 500;
 }
 
 header nav ul li a {
   position: relative;
-}
-
-
-header nav ul li a:hover {
-  color: #9b30ff;
-  /* 또는 */
-  /* text-shadow: 1px 1px 15px #9b30ff; */
 }
 
 header nav ul li a::before {
@@ -166,11 +131,16 @@ header nav ul li a::before {
   display: block;
   width: 0;  /*초기에는 및줄이 없도록 0으로 설정*/
   height: 1px;
-  background-color: #9b30ff;
+  background-color: black;
   position: absolute;
   bottom: -2px;
   left: 0;
   transition: width 0.5s;
+}
+
+header nav ul li a:hover {
+  /* 글자에 hover하면 검정색으로 바뀜 */
+  color: black;
 }
 
 header nav ul li a:hover::before {
@@ -184,32 +154,74 @@ header .btn-hamburger {
 header .btn-hamburger .material-symbols-outlined {
   font-size: 40px;
   /* 수직 정렬 맞추기 */
-  display: block;
+  display: block
+
+
 }
 
-/* VISUAL */
+/* ---------------------------------VISUAL------------------------- */
 .visual {
-  /* (중요) 헤더가 fixed 되어 일반 배치 흐름에서 벗어남
-    fixed 헤더 다음에 오는 요소 (예 : 섹션)는 헤더의 높이만큼 외부 여백 추가 필요 */
-  margin-top: 60px;
+  margin-top: 80px;
   width: 100%;
-  background-color: #000;
-  color: white;
+  height: calc(100vh - 40px);
+  position: relative;
+}
+.visual::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/background_image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.4;
+  z-index: -1;
 }
 
 .visual > .inner {
-  /* 계산식을 넣을 수 있는 함수 : calc() */
-  height: calc(100vh - 60px);
-  font-size: 70px;
+  height: 100%;
+}
+
+.visual__text {
+  width: 100%;
+  height: 100%;
+  
+  color: black;
+  font-weight: 700;
+
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.visual > .inner .purple {
-  color: #9b30ff;
+.visual__text .visual__port {
+  font-size: 40px;
 }
 
-/* ABOUT */
+.visual__text .text-box {
+  font-size: 20px;
+  margin-top: 50px;
+}
+
+.visual__btn {
+  margin-top: 20px;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  border: 1px solid #222;
+}
+
+.blink {
+  animation: blink 0.5s infinite;
+  font-size: 30px;
+}
+
+
+/* -------------------------------ABOUT------------------------------- */
 .about {
   padding: 150px 0;
 }
@@ -233,185 +245,205 @@ header .btn-hamburger .material-symbols-outlined {
   box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.1); /*원의 그림자*/
 }
 
+
 .about .about__wrapper .about__text {
   width: 40%;
   padding: 30px;
   display: flex;
-  flex-direction: column;   /* 글자들 배치를 다시 수직 방향으로 바꿔줌 / 주축이 수직으로 바뀜 */
-  justify-content: space-evenly;  /* 여백들의 공간을 똑같이 나눠줌 */
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.about .about__wrapper .about__text .slogan {
-  font-size: 35px;
-  font-weight: bold;
+.about .about__wrapper .about__text .about__info {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  margin: 40px 0;
 }
 
-.about .about__wrapper .about__text h3 {
-  font-size: 20px;
-  font-weight: 600;
+
+.about .about__wrapper .about__text .about__info_text {
+  display: flex;
+  flex-direction: column;
+  padding: 0 40px;
 }
 
 .about .about__wrapper .about__text h4 {
   font-size: 18px;
   font-weight: 600;
-  margin-bottom: 16px;
+  margin-bottom: 12px;
 } 
 
 .about .about__wrapper .about__text li {
   line-height: 1.8;
 }
 
-.about .about__btn {
-  position: absolute;
-  bottom: -30px;
-  right: 30px;
+.icon_icon {
+  font-size: 40px;
 }
 
-/* .about .about__btn a {
-  display: flex;
-  align-items: center;
-} */
 
-.about .about__btn img {   /*contact 이미지 정렬*/
-  display: inline;
-  width: 28px;
-  vertical-align: middle;
-  margin-right: 10px;
-}
-
-/* SKILL */
-.skill {
-  padding: 150px 0 ;
-  background-color: #000;
-  color: white;
-}
-
-.skill .title::after {
-  background-color: white;
-}
-
-.skill .skill__list {
-  display: flex;
-  justify-content: space-evenly;   /* 각 요소들의 여백을 동일하게 */
-  text-align: center;
-  /* 창이 줄어들면(정렬할 공간이 부족하면) 다음 줄로 내려가게 정렬됨 */
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
-/* 하위 선택자가 아닌 자식 선택자 쓴 것에 유의! */
-.skill .skill__list > li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  /* 각 li들이 아래에서 위로 올라옴 */
-  /* 방법1: position */
-  /* position: relative;
-  top: 100px; */
-
-  /* 방법2: transform translateY */ 
-  /* position보다 성능이 조금 더 빠를 수 있음 */
-  transform: translateY(100px);
-  
-  opacity: 0;
-  transition: 1s;
-
-}
-
-.skill.show .skill__list > li {
-  /* top: 0; */
-  opacity: 1;
-  transform: translateY(0);
-  
-}
-
-.skill .skill__list > li:nth-child(1) { transition-delay: 0.2s; }
-.skill .skill__list > li:nth-child(2) { transition-delay: 0.4s; }
-.skill .skill__list > li:nth-child(3) { transition-delay: 0.6s; }
-.skill .skill__list > li:nth-child(4) { transition-delay: 0.8s; }
-.skill .skill__list > li:nth-child(5) { transition-delay: 1s; }
-
-
-.skill .skill__list li div {
-  width: 50px;
-  height: 40px;
-  background-color: #9b30ff;
-  border-radius: 50%;
-  transform: rotate(-20deg);
-  transition: 0.5s;
-}
-
-.skill .skill__list li:hover div {  /*li에 hover 되었을 때 div만 돌아감*/
-  transform: rotate(0deg);
-}
-
-.skill .skill__list li div p {
-  font-weight: bold;
-  font-size: 30px;
-  letter-spacing: -2px;    /* 글자 사이의 간격(자간) */
-}
-
-.skill .skill__list li h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin: 30px 0 20px;
-}
-
-/* PROJECT */
-.project { 
+/* --------------------------------SKILLS--------------------------------- */
+.skills {
   padding: 150px 0;
 }
 
-.project .port {
+.skills .skills__list {
   display: flex;
-  margin: 20px 0;
+  justify-content: space-evenly;
+  text-align: center;
+  margin: 100px 0;
 }
 
-.project .port .port__img, 
-.project .port .port__text {   /*둘의 너비를 50%씩 배분*/
+/* 하위 선택자가 아닌 자식 선택자 쓴 것에 유의! */
+#skills {
+  background-color: #f9c51d;
+}
+
+#skills .inner .skills__list {
+  /* border: 3px solid orange; */
+  display: flex;
+  background-color: hsla(0, 0%, 100%, .8);
+  border-radius: 20px;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+}
+
+.skills .skills__list > li {
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+
+  transform: translateY(100px);
+
+  opacity: 0;
+  transition: 1s;
+}
+
+.skills.show .skills__list > li {
+  transform: translateY(0);
+
+  opacity: 1;
+}
+
+.skills .skills__list > li:nth-child(1) { transition-delay: 0.2s; }
+.skills .skills__list > li:nth-child(2) { transition-delay: 0.4s; }
+.skills .skills__list > li:nth-child(3) { transition-delay: 0.6s; }
+.skills .skills__list > li:nth-child(4) { transition-delay: 0.8s; }
+.skills .skills__list > li:nth-child(5) { transition-delay: 1s; }
+
+
+.skills .skills__list li div img {
+  width: 40px;
+  height: 40px;
+
+  transform: scale(2);
+  transition: 0.5s;
+}
+
+.skills .skills__list li:hover img {
+  transform: scale(3);
+  color: black;
+  cursor: pointer;
+}
+
+.skills .skills__list li h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 60px 0 20px;
+}
+
+
+/* -------------------------------PROJECTS--------------------------- */
+.projects {
+  padding: 150px 0;
+  background-color: #457ce9;
+}
+
+.projects .title {
+  color: white;
+}
+
+.projects .port {
+  display: flex;
+  justify-content: space-between;
+  margin: 40px 0;
+  column-gap: 50px;
+}
+
+/* 수평 가운데 정렬 */
+.projects .port .port__img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.projects .port .port__img, 
+.projects .port .port__text {   /*둘의 너비를 50%씩 배분*/
   width: 50%;
   height: 400px;
 }
 
-.project .port .port__img .swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.project .port .port__img .swiper img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.project .port .port__text {   /*둘의 너비를 50%씩 배분*/
+.projects .port .port__text {
+  border: 1px solid #333;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 .5rem 0 rgba(68, 68, 68, .4);
   padding: 30px;
   font-size: 14px;
   display: flex;
-  flex-direction: column;   /*수직정렬*/
-  justify-content: space-evenly;    
+  flex-direction: column;
+  /* justify-content: space-between; */
+
 }
 
-.project .port .port__text h3{
+.projects .port .port__text h3 {
+  padding-bottom: 20px;
   font-size: 20px;
-  font-weight: 800;
+  font-weight: bold;
+  align-self: flex-start;
+  background-color: #f94148;
+  border: 1px solid #f94148;
+  color: white;
+  padding: 4px 18px;
+  border-radius: 10px;
+
+  margin-bottom: 30px;
+  
 }
 
-.project .port .port__text li {
-  line-height: 1.8;
+.projects .port .port__text li {
+  line-height: 2;
+  font-size: 16px;
 }
 
-.project .port .port__text li span {
+.projects .port .port__text li span {
   font-weight: bold;
 }
 
-.project .port .btn-group {
+.projects .port .btn-group {
   display: flex;
-  column-gap: 40px;
+  justify-content: flex-end;
+  column-gap: 20px;
+  margin-top: 80px;
+} 
+
+.projects .port .btn-group .btn-modal-image {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-/* CONTACT */
+.projects .port .btn-group .btn-modal {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+
+
+/* ---------------------------------CONTACT-------------------------------- */
 .contact {
   padding: 200px 0;
 }
@@ -420,44 +452,55 @@ header .btn-hamburger .material-symbols-outlined {
   line-height: 2;
   text-align: center;
 
-  transition: 1s;  /*transform 효과들을 1초동안 천천히 줌*/ 
-  opacity: 0;   /*초기상태는 투명한 상태로*/
+  /* transform 효과들을 1초동안 천천히 줌 */
+  /* 투명함에서 효과 시작 */
+  transition: 1s;
+  opacity: 0;
 }
 
-/* 애니메이션 효과 추가 -- 이메일과 전화번호호 */
-.contact .contact__info li:nth-child(1), 
+/* 애니메이션 효과 추가 -- 이메일과 전화번호 */
+.contact .contact__info li:nth-child(1),
 .contact .contact__info li:nth-child(3) {
   /* 오른쪽에서 왼쪽으로 나타나는 */
-  transform: translateX(150px);  /* 오른쪽에서 나타나기 위한 오른쪽 배치 */  
+  transform: translateX(150px); 
 }
 
 .contact .contact__info li:nth-child(2) {
   /* 왼쪽에서 오른쪽으로 나타나는 */
-  transform: translateX(-150px);  /* 왼쪽에서 나타나기 위한 왼쪽 배치*/ 
+  transform: translateX(-150px);
 }
 
 .contact.show .contact__info li {
-  transform: translateX(0); /*다시 원래 상태로 돌아옴*/
-  opacity: 1;  
-  
+  /* 다시 원래 상태로 돌아옴 */
+  transform: translateX(0);
+  /* 색 표시됨 */
+  opacity: 1;
 }
 
+/* sns 이미지들 위치 */
 .contact .contact__sns {
   margin-top: 20px;
 }
 
+/* sns 이미지들의 크기 조정 */
+.contact .contact__sns ul li img {
+  width: 40px;
+}
+
+/* sns 이미지들의 원래 위치 */
 .contact .contact__sns ul {
   display: flex;
   justify-content: center;
   column-gap: 10px;
-
 }
 
-/* 애니메이션 추가 -- sns 이미지*/
+/* sns 이미지들 애니메이션 효과 -- sns 이미지*/
 .contact .contact__sns ul li {
-  transform: translateY(100px);  /* 초기값은 아래로 100px에서 시작 */
-  transition: 1s;
-  opacity: 0;
+  /* 아래 100px에서 위로 올라옴 */
+  transform: translateY(100px);
+  
+    transition: 1s;
+    opacity: 0;
 }
 
 .contact.show .contact__sns ul li {
@@ -466,11 +509,16 @@ header .btn-hamburger .material-symbols-outlined {
 }
 
 /* 이미지가 각각 따로 올라옴 */
-.contact.show .contact__sns ul li:nth-child(1){
+.contact.show .contact__sns ul li:nth-child(1) {
   transition-delay: 0.2s;
 }
+
 .contact.show .contact__sns ul li:nth-child(2) {
   transition-delay: 0.4s;
+}
+
+.contact.show .contact__sns ul li:nth-child(3) {
+  transition-delay: 0.6s;
 }
 
 .contact .contact__sns ul li img {
@@ -478,7 +526,7 @@ header .btn-hamburger .material-symbols-outlined {
 }
 
 
-/* MODAL */
+/* ---------------------------------MODAL-------------------------------- */
 #modal, #imageModal {
   /* 화면 전체 영역 덮기 */
   position: fixed;
@@ -536,7 +584,11 @@ header .btn-hamburger .material-symbols-outlined {
 }
 
 
-/* -------------------------------FOOTER----------------------------------- */
+
+
+
+
+/* --------------------------------FOOTER---------------------------------- */
 footer {
   background-color: #000;
   color: white;
@@ -545,23 +597,24 @@ footer {
 footer .copyright {
   text-align: center;
   font-weight: 600;
-  line-height: 200px;
+  line-height: 300px;
+  
 }
 
-/* SCROLL TO TOP */
+/* -----------------------------------SCROLL TO TOP------------------------- */
 #to-top {
-  width: 42px;
-  height: 42px;
-  background-color: #fff8e8;
-  border: 2px solid #333;
+  width: 45px;
+  height: 45px;
+  
+  border: 3px solid #333;
   border-radius: 10px;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 60px;
+  right: 60px;
   z-index: 9;
   transition: 0.5s;
   /* 처음 상태는 투명에 x축으로 +100px 지점 */
@@ -569,10 +622,10 @@ footer .copyright {
   transform: translateX(100px);
 }
 
-/* #to-top.show {
-  transform: translateX(0);
-} */
-
+#to-top span {
+  /* 블록으로 바꿔줘야 아래 여백이 안생김 */
+  display: block;
+}
 
 
 /* 반응형 스타일 */
@@ -585,7 +638,8 @@ footer .copyright {
   .title {
     font-size: 30px;
     margin-bottom: 24px;
-  } 
+  }
+
   .title::after {
     width: 60px;
   }
@@ -595,14 +649,19 @@ footer .copyright {
   }
 
   header nav {
-    background-color: #fff8e8;
+    background-color: #f3f3f3;
     position: fixed;
-    top: 60px;
-    left: 0;
+    top: 82px;
+    left: 30%;
     width: 100%;
     height: 0;
+    /* padding: 0 20px; */
     transition: 0.3s;
     overflow: hidden; 
+  }
+
+  header nav li {
+    margin: 20px ;
   }
 
   header nav.active {
@@ -616,8 +675,8 @@ footer .copyright {
   }
 
   header nav ul li {
-    padding: 10px 80px;
-    font-size: 30px;
+    padding: 10px 30px;
+    font-size: 20px;
   }
 
   header nav ul li a {
@@ -645,31 +704,43 @@ footer .copyright {
     text-align: center;
   }
 
-  .skill {
+  .about .about__text {
+    align-items: center;
+  }
+
+  .skills {
+    padding: 100px 0;
+    display: flex;
+    flex-wrap: wrap;
+
+  }
+
+  .skills__list li{
+    display: flex ;
+    flex-direction: column; 
+    width: 100%;
+  } 
+
+  .projects {
     padding: 100px 0;
   }
 
-  .project {
-    padding: 100px 0;
-  }
-
-  .project .port {
+  .projects .port {
     flex-direction: column;
-    margin: 40px 0;
+    margin: 20px 0;
   }
 
-  .project .port .port__img,
-  .project .port .port__text {
+  .projects .port .port__img,
+  .projects .port .port__text {
     width: 100%;
   }
 
-  .project .port .port__text {
-    padding: 20px 0 0;
+  .projects .port .port__img {
+    margin-bottom: 20px;
   }
 
   .contact {
     padding: 100px 0;
-
   }
 
   #modal .modal-content,
@@ -681,6 +752,7 @@ footer .copyright {
     width: 100%;
   }
 
+
 }
 
 
@@ -689,14 +761,13 @@ footer .copyright {
 
 
 
-/* 애니메이션 정의는 맨 마지막에  */
-@keyframes flash {
-  0%, 50%, 100% {
-    opacity: 1;
-  }
-  25%, 75% {
+
+
+
+
+/* 타이핑 애니메이션 */
+@keyframes blink {
+  to {
     opacity: 0;
   }
 }
-
-
